Added a funktion so you can change amount of balls with a input number field and with a implement button

--- a/style.css
+++ b/style.css
@@ -26,6 +26,25 @@ html, body {
 
 
   /* Ändringar följer nedanför */
+  .add {
+    font-size: auto;
+    letter-spacing: -1px;
+    position: absolute;
+    margin: 0;
+    top: 30px;
+    left: 55px;
+  }
+
+  input {
+    font-size: auto;
+    letter-spacing: -1px;
+    position: absolute;
+    margin: 0;
+    top: 30px;
+    left: 5px;
+    width: 40px;
+  }
+
   button {
     font-size: auto;
     letter-spacing: -1px;
